Space header description position on mobile https://github.com/humhub/humhub-internal/issues/984

--- a/static/scss/_bootstrap3.scss
+++ b/static/scss/_bootstrap3.scss
@@ -498,6 +498,7 @@ TODO: Remove this file when Bootstrap 3 is no longer supported
 
         .panel-profile .panel-profile-header .img-profile-data h1 {
             font-size: 20px !important;
+            line-height: 20px;
             margin-bottom: 2px;
         }
     }
